# STsystem

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOVER_2026-05-20.md  HANDOVER_2026-06-15.md  README.md  compare_categorize.py  compare_schedules.py  etl_114_2.py  export_csv.ps1  firestore.rules  index.html  main.py  pyproject.toml  read_excel.ps1  rom_overlap_check.py  start-server.py  verify_etl.py
docs/: CHANGELOG.md  DEPLOYMENT.md  ISSUES_LOG.md  PLAN_grade9_realtime_refresh.md  PLAN_v2.0.0.md  README.md  V2_E2E_CHECKLIST.md  V2_PERMISSION_SYSTEM.md
docs/backup/: README.md
scripts/: firestore-bootstrap-inhu.js  firestore-deploy-rules.js  firestore-health-check.js  firestore-snapshot.js
src/css/: style.css
src/js/: app.js  v2-app.js
src/js/modules/: dataManager.js  firebaseConfig.js  pdfGenerator.js  scheduleParser.js
src/js/modules/v2/: authGuardV2.js  envDetector.js  pendingRequestService.js  roleService.js  schemaConstants.js  schoolDataService.js  teacherAccountManager.js
test/: run_tests.py  test-grade9-refresh.mjs  test-subject-domain.mjs  v2-isolation-test.js  v2-patch-test.js  v2-smoke-test.js
