[project]
name = "stsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2,<3",
    "playwright>=1.58.0",
    "pyexcel>=0.7.4",
    "pyexcel-xls>=0.7.1",
    "pywin32>=311",
    "xlrd>=2.0.2",
]
